[fix] overflow

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -21,7 +21,7 @@ body {
 html, div {
     font-family: 'Gill Sans', 'Gill Sans MT',"Noto Sans JP", "游ゴシック", "Yu Gothic", YuGothic, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "Noto Sans Japanese", Meiryo, sans-serif;
     overflow: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 a {
@@ -192,6 +192,7 @@ img {
     align-items: center;
     flex-direction: column;
     background: $bg-white;
+    padding: 40px 0;
 }
 
 // フォームの枠組み
